--- a/styles/style.css
+++ b/styles/style.css
@@ -107,10 +107,12 @@ body {
   width: 100%;
 }
 
+.logo {
+  width: 200px;
+}
 .logo-img {
-  float: left;
-  width: 15%;
-  height: 15%;
+  width: 100%;
+  height: 100%;
   margin: 0;
 }
 /* buttons */
@@ -567,8 +569,8 @@ video {
 /* Navbar styles for small screens */
 @media screen and (max-width: 600px) {
   .logo-img {
-    width: 30%;
-    height: 100%;
+    width: 70%;
+    height: 80%;
   }
   .w-nav-menu {
     position: fixed;
@@ -722,7 +724,7 @@ video {
     font-size: 1.5rem;
   }
   .companies-grid {
-    margin-left: 5rem;
+    margin-left: 10rem;
     justify-content: center;
     grid-template-columns: 1fr;
   }
