--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,7 @@ body {
   display: table;
   clear: both;
 }
-@media screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
   .column {
     width: 100%;
     height: auto;
@@ -121,6 +121,7 @@ body {
   background-color: #0088cc;
   padding: 1rem 1rem;
   border-radius: 90px;
+  color: black;
 }
 
 .btn:hover,
@@ -134,6 +135,7 @@ body {
   padding: 1.5rem;
   font-size: 1rem;
   margin-top: 20px;
+  color: black;
 }
 
 .navbar {
@@ -654,6 +656,7 @@ video {
     margin: auto;
     margin-left: 20px;
     line-height: 1.6;
+    width: 100%;
   }
   .home-content h1 {
     font-size: 1.5rem;
